--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
         depends_on:
             - mysql
     mysql:
-        image: 'mysql:8.0'
+        image: 'tobi312/rpi-mariadb:10.3-ubuntu'
         restart: always
         ports:
             - '${FORWARD_DB_PORT:-3306}:3306'
